# FaceTransform_S9

./: .gitignore  .gitmodules  CMakeLists.txt  CleanFaceSwap.py  FaceSwap.py  FaceSwapPyCpp.py  README.md  TODO.txt  label.txt  setup_projet.txt  testLib.py
cpp/: CMakeLists.txt
cpp/src/faceswap_func/: faceswap_func.cpp  faceswap_func.h  homographie.cpp  homographie.h  wrapper.cpp
cpp_cuda/: CMakeLists.txt
cpp_cuda/src/: wrapper.cpp
cpp_cuda/src/beard/: Image.h  addBeard_func.h
cpp_cuda/src/biggerface/: biggerface.cpp  biggerface.h
cpp_cuda/src/faceswap/: cuda_func.cu  cuda_func.cuh  faceswap_func.cpp  faceswap_func.h  faceswap_func_cuda.cpp  faceswap_func_cuda.h
cpp_cuda/src/faceswap_func_cuda/: faceswap_func.cpp  faceswap_func.h  faceswap_func_cuda.cpp  faceswap_func_cuda.h  homographie.cpp  pybind_cuda.cu  pybind_cuda.cuh  wrapper.cpp
cpp_cuda/src/homography/: homographie.cpp  homographie.h
cuda/: CMakeLists.txt
cuda/src/faceswap_func_cuda/: faceswap_func_cuda.cpp  faceswap_func_cuda.h  homographie.cpp  homographie.h  pybind_cuda.cpp  pybind_cuda.cu  pybind_cuda.cuh  pybind_cuda.h  wrapper.cpp
lib/: faceswap_func.cp39-win_amd64.pyd
lib/Release/: FaceTransform.cp39-win_amd64.pyd  FaceTransform.exp  FaceTransform.lib  cuda_lib.exp  cuda_lib.lib  faceswap_func.cp39-win_amd64.pyd  faceswap_func.exp  faceswap_func.lib
python/: BeardPyCpp.py  BiggerFacePyCpp.py  FaceSwap.py  FaceSwapPyCpp.py  FaceSwapPyCppReal.py  FaceSwapPyCuda.py  FaceSwapPyCudaReal.py
python/full_python/: CleanFaceSwap.py  Color.py
python/tests/: XY.txt  label.txt  testLib_cpp.py  testLib_cuda.py
src/: wrapper.cpp
src/beard/: Image.cpp  addBeard_func.cpp
src/biggerface/: biggerface.cpp  biggerface.h
src/faceswap/: faceswap_func.cpp  faceswap_func.h
src/utils/: cuda_func.cu  cuda_func.cuh  homographie.cpp  homographie.h  utils.cpp  utils.h
tests/: label.txt  testLib copy.py  testLib.py  testLib2.py
